--- a/desafio10/estilos/style.css
+++ b/desafio10/estilos/style.css
@@ -30,6 +30,10 @@ body {
     font-family: var(--font-padrao);
 }
 
+a.externo::after {
+    content: '\00A0\1F517';
+}
+
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor6));
     min-height: 150px;
@@ -41,6 +45,7 @@ header > h1 {
     color: white;
     font-family: var(--font-destaque);
     font-size: 3em;
+    font-weight: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.501);
 }
@@ -53,6 +58,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.501);
 }
 
@@ -64,7 +70,7 @@ nav {
 }
 
 nav > a {
-    color: white;
+    color: var(--cor2);
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
@@ -93,12 +99,15 @@ main {
 main h1 {
     color: var(--cor6);
     font-family: var(--font-android);
+    font-weight: normal;
+    font-size: 1.8em;
 }
 
 main h2 {
     font-family: var(--font-android);
     color: var(--cor4);
     font-size: 1.3em;
+    font-weight: normal;
     background-image: linear-gradient(to right, var(--cor1), transparent);
     text-indent: 15px;
 }
@@ -112,6 +121,22 @@ main img.pequena {
     display: block;
     margin: auto;
 }
+
+div.video {
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 58%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
 main p {
     text-align: justify;
     text-indent: 30px;
@@ -138,10 +163,41 @@ main a:hover {
     color: var(--cor4);
 }
 
+aside {
+    background-color: var(--cor2);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.22);
+}
+
+aside > h3 {
+    background-color: var(--cor5);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+aside > ul {
+    list-style-type: '\2714\00A0\00A0';
+    list-style-position: inside;
+    columns: 2;
+}
+
 footer {
     background-color: var(--cor6);
     color: white;
     text-align: center;
     margin: auto;
     padding: 15px;
+}
+footer a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor1);
 }
